# liaozhai

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  liaozhai.example.toml  worlds.example.toml
.github/workflows/: check.yml
crates/liaozhai/: Cargo.toml
crates/liaozhai-auth/: Cargo.toml
crates/liaozhai-auth/src/: account.rs  lib.rs  params.rs  rate_limiter.rs  store.rs
crates/liaozhai-core/: Cargo.toml
crates/liaozhai-core/src/: constants.rs  error.rs  id.rs  lib.rs
crates/liaozhai-net/: Cargo.toml
crates/liaozhai-net/src/: codec.rs  connection.rs  context.rs  lib.rs  output.rs  session.rs
crates/liaozhai-server/: Cargo.toml
crates/liaozhai-server/src/: config.rs  listener.rs  main.rs
crates/liaozhai-server/tests/: cli.rs
crates/liaozhai-worlds/: Cargo.toml
crates/liaozhai-worlds/src/: lib.rs  metadata.rs  registry.rs
crates/liaozhai/src/: lib.rs
docs/design/: index.md
docs/design/01-draft/: 0002-architecture-overview.md  0003-bevy-ecs-as-the-core-data-model.md  0004-multi-world-server-one-bevy-ecsworld-per-game-world.md  0005-tokio-actor-model-concurrency.md  0006-cells-as-the-primary-spatial-unit.md  0007-inspired-by-not-bound-by-prior-mushmud-systems.md  0008-lykn-as-the-soft-code-language.md  0009-workspace-crate-layout.md  0010-graph-topology-and-query-architecture.md
docs/design/05-active/: 0011-v0.1-implementation-plan.md
docs/design/06-final/: 0001-architecting-a-text-world-engine-from-mud-heritage-to-bevy-ecs.md
docs/dev/: 0001-liaozhai-mux-v0.1-m1-detailed-implementation-plan.md  0002-liaozhai-mux-v0.1-m2-detailed-implementation-plan.md  0003-liaozhai-mux-v0.1-m3-detailed-implementation-plan.md  0004-liaozhai-mux-v0.1-m4-detailed-implementation-plan.md  0005-liaozhai-mux-v0.1-m5-detailed-implementation-plan.md  0006-liaozhai-mux-v0.1-m6-detailed-implementation-plan.md
