[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "A Rust-based multi-user exegesis for procedural literary fiction and world-building, in the PennMUSH/TinyMUSH lineage"
rust-version = "1.85"
repository = "https://github.com/hexagram30/liaozhai"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde              = { version = "1", features = ["derive"] }
toml               = "1"
clap               = { version = "4", features = ["derive"] }
thiserror          = "2"
anyhow             = "1"
bytes              = "1"
tokio-util         = { version = "0.7", features = ["codec"] }
futures-util       = "0.3"
uuid               = { version = "1", features = ["v4", "serde"] }
rusqlite           = { version = "0.39", features = ["bundled"] }
argon2             = { version = "0.5", features = ["rand"] }
password-hash      = { version = "0.5", features = ["getrandom"] }
rpassword          = "7"
tempfile           = "3"
time               = { version = "0.3", features = ["formatting"] }

# Internal crate dependencies
liaozhai-core   = { path = "crates/liaozhai-core" }
liaozhai-net    = { path = "crates/liaozhai-net" }
liaozhai-auth   = { path = "crates/liaozhai-auth" }
liaozhai-worlds = { path = "crates/liaozhai-worlds" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
