[package]
name = "liaozhai-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Account model and authentication for Liaozhai MUX"
rust-version.workspace = true

[dependencies]
liaozhai-core.workspace = true
thiserror.workspace = true

[lints]
workspace = true
