[package]
name = "liaozhai-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Telnet codec and connection handling for Liaozhai MUX"
rust-version.workspace = true

[dependencies]
liaozhai-core.workspace = true
liaozhai-auth.workspace = true
liaozhai-worlds.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
futures-util.workspace = true

[lints]
workspace = true
