[package]
name = "liaozhai-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Liaozhai MUX server binary"
rust-version.workspace = true

[[bin]]
name = "liaozhai-server"
path = "src/main.rs"

[dependencies]
liaozhai-core.workspace = true
liaozhai-net.workspace = true
liaozhai-auth.workspace = true
liaozhai-worlds.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
rpassword.workspace = true
time.workspace = true

[lints]
workspace = true
